[package]
name = "api-speed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-timer = "0.7.4"
chrono = "0.4.22"
isahc = { version = "1.7.2", features = ["json"] }
prettytable-rs = "0.9.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
